fix build + openapi
